Final copy for 8 May 2022

--- a/newsletter/2022-05-08.md
+++ b/newsletter/2022-05-08.md
@@ -4,13 +4,13 @@
 ![OpenSea mobile app](https://images.unsplash.com/photo-1651130541206-392cdc2e926e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
 *Photo by PiggyBank via Unsplash*
 
-**My former colleague Paul Vigna** reported this week in the Wall Street Journal that the market for non-fungible tokens ["is collapsing."](https://www.wsj.com/articles/nft-sales-are-flatlining-11651552616) His main evidence: Data from the website NonFungible showing that the daily average volume of NFT sales has fallen more than 90% since September.
+**My former colleague Paul Vigna** reported this week in the Wall Street Journal that the market for non-fungible tokens ["is collapsing."](https://www.wsj.com/articles/nft-sales-are-flatlining-11651552616) His main evidence: Data from the website NonFungible showing that the daily average NFT sales volume is down 92% since September.
 
-While that's certainly not a welcome development for the industry, it should be noted there are still plenty of promising developments elsewhere. So maybe Paul's predictions of doom will prove premature.
+While that's certainly not a welcome development for the industry, I would note that there are still promising developments happening elsewhere, including new platform launches and major brands getting involved in NFTs. So maybe Paul's predictions of doom will prove premature.
 
 The latest:
 
-- **Big crypto exchanges are ramping up their NFT offerings.** Coinbase launched its new marketplace for non-fungible tokens, but early signups were [slower than expected](https://decrypt.co/99561/coinbase-nft-marketplace-150-users-first-day-public). Meanwhile, rival Kraken [opened a waitlist](https://cointelegraph.com/news/kraken-nft-marketplace-opens-waitlist-for-beta) to participate in the beta version of its new NFT trading platform. Both are chasing market leader OpenSea, which saw [record trading volume](https://decrypt.co/99226/nfts-dead-opensea-daily-trading-record-476m-ethereum) near half a billion dollars on May 1.
+- **Big crypto exchanges are ramping up their NFT offerings.** Coinbase launched its new NFT marketplace, but early signups were [slower than expected](https://decrypt.co/99561/coinbase-nft-marketplace-150-users-first-day-public). Meanwhile, rival Kraken [opened a waitlist](https://cointelegraph.com/news/kraken-nft-marketplace-opens-waitlist-for-beta) to participate in the beta version of its new NFT trading platform. Both are chasing NFT market leader OpenSea, which saw [record trading volume](https://decrypt.co/99226/nfts-dead-opensea-daily-trading-record-476m-ethereum) near half a billion dollars on May 1.
 
 - **Starbucks announced a plan** to offer several [new collections of NFTs](https://mashable.com/article/starbucks-nfts-web3) that offer "access to exclusive experiences and perks."
 
@@ -18,13 +18,13 @@ The latest:
 
 - **The Wikimedia Foundation** stopped accepting crypto donations after Wikipedia editors voted to [approve the change](https://www.pcmag.com/news/wikimedia-foundation-agrees-to-end-cryptocurrency-donations), ratifying a community proposal that cited environmental concerns. The foundation had been accepting crypto since 2014.
 
-- **A rare piece of good news regarding crypto hacks.** The NEAR protocol's Rainbow Bridge, which enables cross-chain transactions, successfully repelled an attempted attack without any funds being lost. Alex Shevchenko, CEO of Aurora Labs, explained details of the incident in a [Twitter thread](https://twitter.com/AlexAuroraDev/status/1520810591803293696).
+- **The NEAR protocol's Rainbow Bridge,** which enables cross-chain transactions, successfully repelled an attempted attack without any funds being lost. In fact, the attacker lost some ETH. Alex Shevchenko, CEO of Aurora Labs, explained details of the incident in a [Twitter thread](https://twitter.com/AlexAuroraDev/status/1520810591803293696).
 
 - **The Central African Republic became** the second country to recognize bitcoin as [legal tender](https://www.cnbc.com/2022/04/28/central-african-republic-adopts-bitcoin-as-legal-tender.html). The country's parliament voted unanimously to recognize the popular token as legal tender alongside the country's existing franc. That approach is similar to El Salvador, which last year gave bitcoin legal tender status alongside the U.S. dollar.
 
 - **Argentina’s central bank** issued a blanket ban prohibiting lenders in the country from [offering crypto services](https://www.coindesk.com/policy/2022/05/05/argentinas-central-bank-bans-lenders-from-offering-crypto-services/).
 
-- **Finally, a personal update:** I've decided to leave [Capsule Social](https://capsule.social) to pursue other opportunities. I wish the team well, though, as they continue to push forward with their new decentralized publishing platform, [Blogchain](https://blogchain.app). If you need an invite, you can request one [here](https://forms.zohopublic.com/peter96/form/BlogchainInviteRequests/formperma/7xCuELT6HdgR08w13-Nt8WFx9SmsnZh1YFL9mcP_oCc).
+- **Finally, a personal update:** I've decided to leave [Capsule Social](https://capsule.social) to pursue other opportunities. I wish the team well, though, as they continue to push forward with their new decentralized publishing platform, [Blogchain](https://blogchain.app). If you would like an invite, you can request one [here](https://forms.zohopublic.com/peter96/form/BlogchainInviteRequests/formperma/7xCuELT6HdgR08w13-Nt8WFx9SmsnZh1YFL9mcP_oCc).
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
 
