Adding some links and story ideas

--- a/newsletter/2022-05-22.md
+++ b/newsletter/2022-05-22.md
@@ -4,14 +4,14 @@
 ![]()
 *Photo by TKTKTKT via Unsplash*
 
-New McCormack doc on El Salvador...
+New McCormack doc on El Salvador: https://www.youtube.com/watch?v=ig3UN1GYmY8
 
 The latest headlines:
 
-- UST/Luna update...
+- Markets: UST/Luna update...
+- ZT on abortion rights' effect on privacy laws in general: https://www.nytimes.com/2022/05/19/opinion/privacy-technology-data.html
 - TK
-- TK
-
+- Madonna NFT collection ((Need link))
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
 
