Draft copy for 22 May 2022

--- a/newsletter/2022-05-22.md
+++ b/newsletter/2022-05-22.md
@@ -1,17 +1,41 @@
-# TKTKTKTK
+# Revisiting El Salvador's grand Bitcoin experiment
 ## #Web3Weekly: May 15-21, 2022
 
+<!--
+
 ![]()
-*Photo by TKTKTKT via Unsplash*
 
-New McCormack doc on El Salvador: https://www.youtube.com/watch?v=ig3UN1GYmY8
+Photo by TKTKTKT via Unsplash
 
-The latest headlines:
+-->
 
-- Markets: UST/Luna update...
-- ZT on abortion rights' effect on privacy laws in general: https://www.nytimes.com/2022/05/19/opinion/privacy-technology-data.html
-- TK
-- Madonna NFT collection ((Need link))
+**We just got two new in-depth stories** about El Salvador's adoption of bitcoin as legal tender. The picture they paint isn't entirely pretty, which may provide some lessons for other countries considering similar moves.
+
+In a [special report for Politico](https://www.politico.com/news/magazine/2022/05/12/el-salvador-bitcoin-currency-struggles-00030422), Ben Schreckinger details several complications El Salvador's bitcoin rollout has run into since it was announced late last year. Only 20% of Salvadoran merchants have adopted the cryptocurrency, preferring so far to stick with the U.S. dollar for daily transactions, according to data from the National Bureau of Economic Research. In addition, identity thieves have stolen some citizens' bitcoin. And an unrelated outbreak of gang violence may be distracting the government from better addressing the currency issues, Schreckinger reports.
+
+He also describes a disturbing authoritarian streak in President Nayib Bukele, including a new law mandating prison time for members of the media who report statements from criminal groups. Some bitcoiners also believe he's been too eager to promote the government's official crypto wallet, dubbed Chivo, as a way of maintaining control over the country's digital economy.
+
+Similar concerns run through podcaster Peter McCormack's new documentary about El Salvador, titled [Follow the Money](https://www.youtube.com/watch?v=ig3UN1GYmY8). McCormack shies from calling himself a journalist, but I must say he does a pretty good rendition of one when he questions Bukele himself about whether he's trying to become a dictator. (I'll let you judge for yourself how convincing his on-camera answer is.)
+
+McCormack is unabashedly a bitcoin fan who's ultimately optimistic about the token's adoption in El Salvador. But as he often does in [his regular podcast](https://www.whatbitcoindid.com/), McCormack is refreshingly open to challenging his own assumptions and taking some fascinating digressions in the documentary.
+
+For me, one of the most powerful parts of Follow the Money is when he visits an ad-hoc community center that serves Salvadoran drug addicts. For a long stretch of time onscreen, as McCormack talks to people in recovery about their personal stories, and to the former adict who started and continues to run the center on a shoestring budget, there's no mention of crypto at all.
+
+Still, he eventually ties the experience back to the subject at hand. Talking later to his American expat hosts on El Salvador's "Bitcoin Beach," a clearly moved McCormack tells them: "These people need help *now*," on problems that bitcoin may take years to affect, if ever.
+
+The week's other notable headlines:
+
+- **The token market stabilized somewhat.** Bitcoin recently traded just under $30,000 and global crypto market cap stood at $1.3 trillion, both little changed for the week. However, stablecoins remained an area of concern for investors. Efforts to shore up the TerraUSD token are [ongoing](https://twitter.com/stablekwon/status/1526896786685583360). Still, the token tumbled even further from its $1 peg on the week, recently trading below 6 cents, down from 19 cents last weekend. Meanwhile, rival Tether [released a new report](https://www.theblockcrypto.com/linked/147816/tether-reduces-commercial-paper-holdings-to-improve-quality-of-reserves) on its reserves, which have recently shifted somewhat from commercial paper to U.S. Treasury debt.
+
+- **Hash rates** for both the Bitcoin and Ethereum networks [hit new all-time highs](https://thedefiant.io/bitcoin-eth-hashrate-ath/).
+
+- **The Lens Protocol** for decentralized social apps [launched](https://www.coindesk.com/business/2022/05/18/aaves-decentralized-social-media-platform-arrives-on-polygon/) on the Polygon blockchain.
+
+- **Coinbase's warning about a potential bankruptcy** during the market plunge earlier this month [could prompt a new U.S. law](https://www.coindesk.com/policy/2022/05/18/biden-administration-wants-crypto-exchanges-to-separate-customer-and-corporate-funds/) that would require crypto exchanges to separate customers' funds from their own, according to CoinDesk.
+
+- **Privacy advocate Zeynep Tufekci** warned in her [latest New York Times column](https://www.nytimes.com/2022/05/19/opinion/privacy-technology-data.html) that the expected rollback of abortion rights by the U.S. Supreme Court, coupled with rampant mobile data collection, could soon lead to draconian enforcement actions against women seeking abortion care.
+
+- **Madonna** is [releasing an NFT collection](https://www.nme.com/news/music/madonna-readies-nft-collection-that-includes-her-avatar-giving-birth-to-a-tree-3221905) that will include an image by Beeple depicting her giving birth to a tree. Frankly, that is somehow a sentence I both completely expected and never expected to have to type.
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
 
