Final copy for 22 May 2022

--- a/newsletter/2022-05-22.md
+++ b/newsletter/2022-05-22.md
@@ -25,7 +25,7 @@ Still, he eventually ties the experience back to the subject at hand. Talking la
 
 The week's other notable headlines:
 
-- **The token market stabilized somewhat.** Bitcoin recently traded just under $30,000 and global crypto market cap stood at $1.3 trillion, both little changed for the week. However, stablecoins remained an area of concern for investors. Efforts to shore up the TerraUSD token are [ongoing](https://twitter.com/stablekwon/status/1526896786685583360). Still, the token tumbled even further from its $1 peg on the week, recently trading below 6 cents, down from 19 cents last weekend. Meanwhile, rival Tether [released a new report](https://www.theblockcrypto.com/linked/147816/tether-reduces-commercial-paper-holdings-to-improve-quality-of-reserves) on its reserves, which have recently shifted somewhat from commercial paper to U.S. Treasury debt.
+- **The token market stabilized a bit.** Bitcoin recently traded just under $30,000 and global crypto market cap stood at $1.3 trillion, both little changed for the week. However, stablecoins remained an area of concern for investors. Efforts to shore up the TerraUSD token are [ongoing](https://twitter.com/stablekwon/status/1526896786685583360). Still, the token tumbled even further from its $1 peg on the week, recently trading below 6 cents, down from 19 cents last weekend. Meanwhile, rival Tether [released a new report](https://www.theblockcrypto.com/linked/147816/tether-reduces-commercial-paper-holdings-to-improve-quality-of-reserves) on its reserves, which have recently shifted somewhat from commercial paper to U.S. Treasury debt.
 
 - **Hash rates** for both the Bitcoin and Ethereum networks [hit new all-time highs](https://thedefiant.io/bitcoin-eth-hashrate-ath/).
 
