Minor markdown fixes

--- a/newsletter/2022-06-12.md
+++ b/newsletter/2022-06-12.md
@@ -1,4 +1,5 @@
-# #Web3 Weekly: June 5-11, 2022
+# #Web3 Weekly
+## June 5-11, 2022
 
 **Market weakness and broader worries about the economy** are still clearly taking a toll on the tech industry. But there are some signs of hope as well in the week's headlines:
 
@@ -12,7 +13,7 @@
 
 - **CoinDesk's popular Consensus conference wraps up today** in Austin, Texas. Video of the event's highlights is available on [CoinDesk's YouTube channel](https://www.youtube.com/c/Coindesk).
 
--**Former Obama advisor David Axelrod and lawyer Andrew N. D'Aversa** co-authored a [post for CoinDesk](https://www.coindesk.com/layer2/2022/06/10/how-the-feds-are-prosecuting-nft-insider-trading-scheme-as-wire-fraud-and-why-that-matters/) about why the government's application of existing federal securities law in an enforcement action related to non-fungible tokens (NFTs) matters to the future of crypto regulation.
+- **Former Obama advisor David Axelrod and lawyer Andrew N. D'Aversa** co-authored a [post for CoinDesk](https://www.coindesk.com/layer2/2022/06/10/how-the-feds-are-prosecuting-nft-insider-trading-scheme-as-wire-fraud-and-why-that-matters/) about why the government's application of existing federal securities law in an enforcement action related to non-fungible tokens (NFTs) matters to the future of crypto regulation.
 
 - **To promote awareness of a new space telescope in the works from NASA,** the U.S. space agency released an Asteroids-like video game in which players identify [black holes, dark matter, and exoplanets](https://gizmodo.com/roman-space-telescope-nasa-video-games-1849029826). Cool!
 
