Fixing a broken story link

--- a/newsletter/2022-06-12.md
+++ b/newsletter/2022-06-12.md
@@ -3,7 +3,7 @@
 
 **Market weakness and broader worries about the economy** are still clearly taking a toll on the tech industry. But there are some signs of hope as well in the week's headlines:
 
-- **Coinbase froze hiring** and even [rescinded some pending job offers](- CoinDesk froze hiring and even rescinded some outstanding offers to new recruits as a cost-cutting measure due to the crypto bear market.) as a cost-cutting measure due to the crypto bear market.
+- **Coinbase froze hiring** and even [rescinded some pending job offers](https://techcrunch.com/2022/06/02/coinbase-hiring-freeze-rescinds-accepted-offers/) as a cost-cutting measure due to the crypto bear market.
 
 - **Meta is reconsidering not renewing paid partnerships** worth tens of millions of dollars a year to host some news publishers' content on Facebook. The spending may instead be shifted to the company's new metaverse projects and to user-generated video initiatives to compete with TikTok, [according to the Wall Street Journal](https://www.wsj.com/articles/facebook-rethinks-news-deals-and-publishers-stand-to-lose-millions-in-payments-11654812251?mod=e2tw). (Paywall)
 
