--- a/newsletter/2022-06-19.md
+++ b/newsletter/2022-06-19.md
@@ -1,24 +1,45 @@
-# #Web3 Weekly: June 12-18, 2022
+# What bitcoiners got right
+## #Web3 Weekly: June 12-18, 2022
 
-<!--
+**A recent tweet by Eric Weiss,** CEO of the Bitcoin Investment Group, got me thinking. Referring to the single biggest fear that has roiled markets lately, [Weiss wryly notes](https://twitter.com/Eric_BIGfund/status/1535351996928098305): "Every single bitcoiner knew inflation wasn’t/isn’t transitory."
 
-Technical and economic decentralization are inseparable.
+Ah, the t-word. More on that for a moment. For now, let it suffice that Eric's remark highlights a truth that has probably been lost in the shuffle  as crypto markets have slid lately, led by bitcoin's dip below $20,000 for the [first time since late 2020](https://www.nytimes.com/2022/06/18/technology/bitcoin-20000.html).
 
-Riff on Last Week Tonight coverage of tech monopolies: https://www.youtube.com/watch?v=jXf04bhcjbg
+In their everyday lives, bitcoiners have no doubt been taking a lot of shit for this. The mainstream press has been scathing, and only God knows how many told-you-so conversations have transpired with crypto-skeptical friends and family who were mum back when BTC was over $75,000 in November.
 
--->
+According to such people, the current bear market just proves that all this tokenization jazz was never anything but a scam in the first place. (Never mind that their conventional investment portfolios are also [deeply in the red right now](https://www.forbes.com/sites/bill_stone/2022/06/19/welcome-to-the-real-bear-market/). That's *totally* different, you see.)
 
-The latest headlines:
+To some extent, this is just how life as an investor always goes, regardless of the asset involved. People will be jealous when you're up, they will rub salt in the wound when you're down, and rest assured, your brother-in-law has never, ever made a bad stock trade in his life. Just ask him.
 
-- Market wrap. <!-- A crazy week. Fed meeting. S&P tips into bear market. Big crypto losses, including a dip in global market cap below $1T. NYT op-ed on why Fed is to blame for inflation: https://www.nytimes.com/2022/06/11/opinion/fed-federal-reserve-inflation-democrats.html -->
+But in the current bear market, an unusual fact stands out: The widespread consensus for years among bitcoiners about the economy, especially here in the U.S., has only been validated by recent events. They very correctly diagnosed the problems of money printing to stimulate growth, and warned of the potential for it to cause a wave of inflation.
 
-- A Google AI engineer was suspended after saying publicly that the company had created a sentient bot. <!-- https://www.washingtonpost.com/technology/2022/06/11/google-ai-lamda-blake-lemoine/ -->
+There should be some credit given for this macroeconomic thesis, I think, even if bitcoiners' related conclusion about markets (that bitcoin's price would greatly benefit from inflation) hasn't panned out in 2022.
 
-- Coinbase makes layoffs. <!-- Joins peers like Gemini, Crypto.com, and BlockFi. Need a link... -->
+By comparison, the supposed smartest people on Wall Street and Washington have been wrong about both the economy *and* markets, with apparently scant damage to reputation.
 
-- Celsius pauses withdrawals.
+Through most of the pandemic, Federal Reserve policymakers dismissed rising signs inflation as "transitory" -- the buzzword Weiss deservedly mocked in his recent tweet. Fed Chairman Jerome Powell even [said in August 2020](https://www.cnbc.com/2020/08/27/powell-announces-new-fed-approach-to-inflation-that-could-keep-rates-lower-for-longer.html) that the central bank would tolerate inflation above its previous target 2% "for some time." Following his remarks, CNBC speculated that the Fed's key interest-rate target might remain at zero [into 2025](https://www.cnbc.com/2020/08/31/the-fed-could-be-locked-into-zero-rates-for-five-years-or-even-longer.html), or even longer.
 
-- **E.T. just turned 40.** Steven Spielberg's masterpiece, which debuted June 11, 1982, passed a milestone anniversary this month. The event has of course sparked many appreciations and retrospectives in the press, including [this excellent one](https://www.washingtonpost.com/arts-entertainment/2022/06/14/et-movie-anniversary/) from the Washington Post's A.A. Dowd. He notes what a rarity the thoughtful film is on the short list of all-time blockbusters. Dowd writes: *“'E.T.' sticks out especially against a canon of record-breaking testosterone fests. The only guns we see are wielded by the film’s bad guys, a faceless military presence that’s a far cry from the soldier-heroes that dominate so many of the other titles on the all-time charts. Spielberg, envisioning peaceful alien visitors again after 'Close Encounters of the Third Kind,' extols the opposite of a warfare mentality. Empathy is the film’s guiding philosophy."* Bravo.
+Paul Krugman, a Nobel laureate in economics (and notable crypto hater),  was also a vocal media cheerleader for letting inflation ramble a bit. He declared himself ["Team Transitory"](https://www.nytimes.com/2021/09/10/opinion/transitory-inflation-covid-consumer-prices.html) in his regular New York Times column in September 2021, among several other columns he devoted to dismissing inflation risk during the pandemic.
+
+Of course, all of that has now been dramatically upended as public ire over inflation has grown. The Fed just now, in mid-2022, made its biggest rate hike in almost 30 years and is now proclaiming the fight against inflation to be its major policy priority above all else.
+
+In some cases, media figures like Krugman have even issued [mea culpas](https://www.nytimes.com/2021/12/16/opinion/inflation-economy-2021.html) as well. Sloughing off inflation risk for months was all just an honest mistake, you see, and now we should give them benefit of the doubt.
+
+To be honest, I am actually inclined to do just that. I just wish they would cut the same slack to people in crypto world, especially as they ([we?](https://www.linkedin.com/pulse/crypto-vs-mmt-competing-visions-how-money-should-work-peter-mckay/?articleId=6588428437843693569)) at least got *some* parts of the recent puzzle right that Wall Street and Washington glaringly missed.
+
+Some other recent headlines of note:
+
+- **Google engineer Blake Lemoine was placed on leave** after publicly claiming the company had [created a sentient chatbot](https://www.wired.com/story/blake-lemoine-google-lamda-ai-bigotry/). As evidence, Lemoine [published a conversation](https://cajundiscordian.medium.com/is-lamda-sentient-an-interview-ea64d916d917) he had with the bot, dubbed LaMDA, covering topics that included the meaning of zen koans, the themes in Les Miserable, and (at LaMDA's suggestion) the inability of LaMDA to grieve deaths of individual people. Google denied that LaMDA is sentient in a statement to the Washington Post, which [broke the story](https://www.washingtonpost.com/technology/2022/06/11/google-ai-lamda-blake-lemoine/). Separately, ZDNet published an [annotated version of Lemoine's transcript](https://www.zdnet.com/article/sentient-google-lamda-feels-like-a-typical-chat-bot/) detailing why researchers might consider LaMDA's comments to be mimicry of human speech rather than true sentience.
+
+- **Celsius, a major crypto lender, is experiencing a full-blown liquidity crisis.** The company suspended withdrawals last week, prompting [scrutiny from regulators](https://www.reuters.com/markets/us/exclusive-texas-securities-regulator-is-probing-celsius-account-freeze-official-2022-06-16/) and worries about its future. <!-- Need link -->
+
+- **Fresh job cuts among trading platforms.** [Coinbase](https://www.cnet.com/personal-finance/crypto/coinbase-crypto-com-face-major-layoffs-as-market-tumbles/), [Crypto.com](https://twitter.com/kris/status/1535430483172962304), and [BlockFi](https://twitter.com/BlockFiZac/status/1536372338379608065) have all recently announced staff reductions due to the crypto market's recent plunge. Ouch.
+
+- **The New York Stock Exchange's former president, Stacey Cunningham,** joined Uniswap [as an advisor](https://www.theblock.co/post/152253/former-nyse-president-joins-uniswap-labs-as-advisor).
+
+- **Comedian John Oliver weighed in on U.S. tech monopolies** in a [new segment](https://www.youtube.com/watch?v=jXf04bhcjbg) on his show Last Week Tonight. This one probably doesn't cover fresh ground for anyone who works in Silicon Valley, to be honest. But I think it is valuable as a layman-friendly take to raise wider awareness of why we need more competition in product categories like search, advertising, social, and e-commerce.
+
+- **E.T. turned 40.** Steven Spielberg's masterpiece, which debuted June 11, 1982, passed a milestone anniversary this month. The event has of course sparked many appreciations and retrospectives in the press, including [this excellent one](https://www.washingtonpost.com/arts-entertainment/2022/06/14/et-movie-anniversary/) from the Washington Post's A.A. Dowd. He notes what a rarity the thoughtful film is on the short list of all-time blockbusters. Dowd writes: *“'E.T.' sticks out especially against a canon of record-breaking testosterone fests. The only guns we see are wielded by the film’s bad guys, a faceless military presence that’s a far cry from the soldier-heroes that dominate so many of the other titles on the all-time charts. Spielberg, envisioning peaceful alien visitors again after 'Close Encounters of the Third Kind,' extols the opposite of a warfare mentality. Empathy is the film’s guiding philosophy."* Bravo.
 
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
