Final copy for 19 June 2022

--- a/newsletter/2022-06-19.md
+++ b/newsletter/2022-06-19.md
@@ -1,33 +1,37 @@
 # What bitcoiners got right
 ## #Web3 Weekly: June 12-18, 2022
 
-**A recent tweet by Eric Weiss,** CEO of the Bitcoin Investment Group, got me thinking. Referring to the single biggest fear that has roiled markets lately, [Weiss wryly notes](https://twitter.com/Eric_BIGfund/status/1535351996928098305): "Every single bitcoiner knew inflation wasn’t/isn’t transitory."
+![A bitcoin fan](https://images.unsplash.com/photo-1524673278499-6c651bf78b14?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80)
 
-Ah, the t-word. More on that for a moment. For now, let it suffice that Eric's remark highlights a truth that has probably been lost in the shuffle  as crypto markets have slid lately, led by bitcoin's dip below $20,000 for the [first time since late 2020](https://www.nytimes.com/2022/06/18/technology/bitcoin-20000.html).
+*Photo by Icons8 via Unsplash*
 
-In their everyday lives, bitcoiners have no doubt been taking a lot of shit for this. The mainstream press has been scathing, and only God knows how many told-you-so conversations have transpired with crypto-skeptical friends and family who were mum back when BTC was over $75,000 in November.
+**A recent tweet by Eric Weiss, CEO of the Bitcoin Investment Group, got me thinking.** Referring to the single biggest fear that has roiled markets lately, [Weiss wryly notes](https://twitter.com/Eric_BIGfund/status/1535351996928098305): "Every single bitcoiner knew inflation wasn’t/isn’t transitory."
 
-According to such people, the current bear market just proves that all this tokenization jazz was never anything but a scam in the first place. (Never mind that their conventional investment portfolios are also [deeply in the red right now](https://www.forbes.com/sites/bill_stone/2022/06/19/welcome-to-the-real-bear-market/). That's *totally* different, you see.)
+Ah, the t-word. More on that for a moment. For now, let it suffice that Eric's remark highlights a truth that has perhaps been lost in the shuffle  as crypto markets have slid, led by bitcoin's dip below $20,000 for the [first time since late 2020](https://www.nytimes.com/2022/06/18/technology/bitcoin-20000.html).
 
-To some extent, this is just how life as an investor always goes, regardless of the asset involved. People will be jealous when you're up, they will rub salt in the wound when you're down, and rest assured, your brother-in-law has never, ever made a bad stock trade in his life. Just ask him.
+Bitcoiners have of course been taking a lot of shit for this in their everyday lives. The mainstream press has been scathing, and only God knows how many told-you-so conversations have transpired with crypto-skeptical friends and family who were mum back when BTC was over $75,000 in November. According to such people, the current bear market just proves that all this tokenization jazz was never anything but a scam in the first place. (Never mind that their conventional investment portfolios are also [deeply in the red right now](https://www.forbes.com/sites/bill_stone/2022/06/19/welcome-to-the-real-bear-market/). That's *totally* different, you see.)
 
-But in the current bear market, an unusual fact stands out: The widespread consensus for years among bitcoiners about the economy, especially here in the U.S., has only been validated by recent events. They very correctly diagnosed the problems of money printing to stimulate growth, and warned of the potential for it to cause a wave of inflation.
+To be sure, this is just how life as an investor always goes, regardless of the asset involved. People will be jealous when you're up, they will rub salt in the wound when you're down, and rest assured, your brother-in-law has never, ever made a bad stock trade in his life. Just ask him.
+
+Still, a truly unusual fact stands out in the current situation: The widespread consensus *for years* among bitcoiners about the economy, especially here in the U.S., has been loudly validated by recent events. Correctly and early, bitcoiners diagnosed the problems of money printing to stimulate economic growth, and warned of potential inflation.
 
 There should be some credit given for this macroeconomic thesis, I think, even if bitcoiners' related conclusion about markets (that bitcoin's price would greatly benefit from inflation) hasn't panned out in 2022.
 
-By comparison, the supposed smartest people on Wall Street and Washington have been wrong about both the economy *and* markets, with apparently scant damage to reputation.
+By comparison, the supposed smartest people on Wall Street and in Washington have been wrong about both the economy *and* markets, with apparently scant damage to reputation. This really doesn't see right.
 
-Through most of the pandemic, Federal Reserve policymakers dismissed rising signs inflation as "transitory" -- the buzzword Weiss deservedly mocked in his recent tweet. Fed Chairman Jerome Powell even [said in August 2020](https://www.cnbc.com/2020/08/27/powell-announces-new-fed-approach-to-inflation-that-could-keep-rates-lower-for-longer.html) that the central bank would tolerate inflation above its previous target 2% "for some time." Following his remarks, CNBC speculated that the Fed's key interest-rate target might remain at zero [into 2025](https://www.cnbc.com/2020/08/31/the-fed-could-be-locked-into-zero-rates-for-five-years-or-even-longer.html), or even longer.
+Through most of the pandemic, Federal Reserve policymakers dismissed rising signs inflation as "transitory" -- the buzzword Weiss deservedly mocked in his recent tweet. Fed Chairman Jerome Powell even [said in August 2020](https://www.cnbc.com/2020/08/27/powell-announces-new-fed-approach-to-inflation-that-could-keep-rates-lower-for-longer.html) that the central bank's needed "robust updating" to be *less* stringent about fighting inflation. Instead, he said it would henceforth tolerate inflation above its previous target of 2% "for some time."
 
-Paul Krugman, a Nobel laureate in economics (and notable crypto hater),  was also a vocal media cheerleader for letting inflation ramble a bit. He declared himself ["Team Transitory"](https://www.nytimes.com/2021/09/10/opinion/transitory-inflation-covid-consumer-prices.html) in his regular New York Times column in September 2021, among several other columns he devoted to dismissing inflation risk during the pandemic.
+Following Powell's remarks, CNBC speculated that the Fed's key interest-rate target might remain at zero [into 2025](https://www.cnbc.com/2020/08/31/the-fed-could-be-locked-into-zero-rates-for-five-years-or-even-longer.html), or even longer.
 
-Of course, all of that has now been dramatically upended as public ire over inflation has grown. The Fed just now, in mid-2022, made its biggest rate hike in almost 30 years and is now proclaiming the fight against inflation to be its major policy priority above all else.
+Paul Krugman, a Nobel laureate in economics (and notable crypto hater),  was also a vocal media cheerleader for letting inflation ramble awhile. He declared himself ["Team Transitory"](https://www.nytimes.com/2021/09/10/opinion/transitory-inflation-covid-consumer-prices.html) in his regular New York Times column in September 2021, among several other columns he devoted to dismissing inflation risk during the pandemic.
+
+Of course, all of that has now been dramatically upended as public ire over inflation has grown in '22. The Fed just made its biggest rate hike in almost 30 years and is now proclaiming the fight against inflation to be its major policy priority above all else.
 
 In some cases, media figures like Krugman have even issued [mea culpas](https://www.nytimes.com/2021/12/16/opinion/inflation-economy-2021.html) as well. Sloughing off inflation risk for months was all just an honest mistake, you see, and now we should give them benefit of the doubt.
 
 To be honest, I am actually inclined to do just that. I just wish they would cut the same slack to people in crypto world, especially as they ([we?](https://www.linkedin.com/pulse/crypto-vs-mmt-competing-visions-how-money-should-work-peter-mckay/?articleId=6588428437843693569)) at least got *some* parts of the recent puzzle right that Wall Street and Washington glaringly missed.
 
-Some other recent headlines of note:
+Other recent headlines of note:
 
 - **Google engineer Blake Lemoine was placed on leave** after publicly claiming the company had [created a sentient chatbot](https://www.wired.com/story/blake-lemoine-google-lamda-ai-bigotry/). As evidence, Lemoine [published a conversation](https://cajundiscordian.medium.com/is-lamda-sentient-an-interview-ea64d916d917) he had with the bot, dubbed LaMDA, covering topics that included the meaning of zen koans, the themes in Les Miserable, and (at LaMDA's suggestion) the inability of LaMDA to grieve deaths of individual people. Google denied that LaMDA is sentient in a statement to the Washington Post, which [broke the story](https://www.washingtonpost.com/technology/2022/06/11/google-ai-lamda-blake-lemoine/). Separately, ZDNet published an [annotated version of Lemoine's transcript](https://www.zdnet.com/article/sentient-google-lamda-feels-like-a-typical-chat-bot/) detailing why researchers might consider LaMDA's comments to be mimicry of human speech rather than true sentience.
 
