One more blockquote tweak

--- a/newsletter/2022-06-26.md
+++ b/newsletter/2022-06-26.md
@@ -15,14 +15,15 @@ The amendment's language has since been interpreted broadly to grant all citizen
 
 In a [news analysis](https://www.nytimes.com/2022/06/25/us/supreme-court-abortion-contraception-same-sex-marriage.html) published Friday, the New York Times' Charlie Savage explained:
 
-<blockquote>
-*In addition to declaring a right to abortion, the court struck down involuntary sterilization and laws interfering with who people could choose to live with or marry, along with decriminalizing contraception and same-sex intercourse.*
+<blockquote><em>
 
-*The heart of Justice Alito’s majority opinion is that the 14th Amendment protects only unwritten rights that were already understood to exist in 1868, when it was adopted. Many states then banned abortion, so it was wrong for the Supreme Court, in 1973’s Roe v. Wade, to interpret the 14th Amendment as encompassing a right to abortion, he reasoned.*
+In addition to declaring a right to abortion, the court struck down involuntary sterilization and laws interfering with who people could choose to live with or marry, along with decriminalizing contraception and same-sex intercourse.
 
-*So there you go. If you follow the line of reasoning the Supreme Court majority offered last week to its conclusion, American society could be headed back not to 1973 but to 1868 in terms of many rights. Same-sex marriage, contraception, and perhaps even [interracial marriage](https://www.insider.com/roe-wade-loving-virginia-interracial-marriage-scotus-overturns-2022-6) could be on the docket next.*
+The heart of Justice Alito’s majority opinion is that the 14th Amendment protects only unwritten rights that were already understood to exist in 1868, when it was adopted. Many states then banned abortion, so it was wrong for the Supreme Court, in 1973’s Roe v. Wade, to interpret the 14th Amendment as encompassing a right to abortion, he reasoned.
 
-</blockquote>
+So there you go. If you follow the line of reasoning the Supreme Court majority offered last week to its conclusion, American society could be headed back not to 1973 but to 1868 in terms of many rights. Same-sex marriage, contraception, and perhaps even [interracial marriage](https://www.insider.com/roe-wade-loving-virginia-interracial-marriage-scotus-overturns-2022-6) could be on the docket next.
+
+</em></blockquote>
 
 There's a lot that could be said about that situation. But for our purposes here, let it suffice that it's a great reason to do a checkup of which digital services and devices you're using, how they're handling your data, and whether some might have to go or at least have their settings modified.
 
