--- a/newsletter/2022-06-26.md
+++ b/newsletter/2022-06-26.md
@@ -17,7 +17,7 @@ In a [news analysis](https://www.nytimes.com/2022/06/25/us/supreme-court-abortio
 
 <blockquote><em>
 
-In addition to declaring a right to abortion, the court struck down involuntary sterilization and laws interfering with who people could choose to live with or marry, along with decriminalizing contraception and same-sex intercourse.
+Over several generations, the modern court gradually ruled that a series of unwritten constitutional rights existed as part of the 14th Amendment. In addition to declaring a right to abortion, the court struck down involuntary sterilization and laws interfering with who people could choose to live with or marry, along with decriminalizing contraception and same-sex intercourse.
 
 The heart of Justice Alito’s majority opinion is that the 14th Amendment protects only unwritten rights that were already understood to exist in 1868, when it was adopted. Many states then banned abortion, so it was wrong for the Supreme Court, in 1973’s Roe v. Wade, to interpret the 14th Amendment as encompassing a right to abortion, he reasoned.
 
