Edits for 3 July

--- a/newsletter/2022-07-03.md
+++ b/newsletter/2022-07-03.md
@@ -3,9 +3,9 @@
 
 ![Binance founder CZ](https://upload.wikimedia.org/wikipedia/commons/7/7f/CZ_at_Vietnam_NFT_Summit.jpg)
 
-*Binance founder Changpeng Zhao speaking at a recent NFT conference in Vietnam. Photo via Wikimedia Commons*
+*Binance founder Changpeng Zhao speaking at a recent NFT conference in Vietnam. Forbes reports that his fortune has dwindled by billions during the recent crypto plunge. But like most early investors in the space, he'll be just fine. Unedited photo by Aevozer via Wikimedia Commons under Creative Commons 4.0 license.*
 
-**The New York Times** just ran one story explicitly about the crypto crash and one more indirectly so.
+**The New York Times** just ran one story explicitly about the crypto crash and one perhaps unintentionally so.
 
 Reporter David Yaffe-Bellany checked in on the billionaire cohort of early token investors and found they're [weathering the bear market pretty well](https://www.nytimes.com/2022/06/29/technology/crypto-crash-divide.html), while many small retail investors and less senior startup employees have been wiped out.
 
@@ -13,47 +13,27 @@ One juicy factoid Yaffe-Bellany dug up:
 
 <em><blockquote>The combined fortunes of the 16 richest crypto billionaires exceeded $135 billion in March, Forbes estimated. As of this week, the total was about $76 billion, but most of the loss was suffered by a single billionaire, Changpeng Zhao, the chief executive of the crypto exchange Binance, whose $65 billion fortune shrank to $17.4 billion.</blockquote></em>
 
-Pure number crunching aside, the Times story is particularly unflattering to the Winklevoss brothers, founders of Gemini Capital. Seems they started a tour of their garage band TKTKTKTK the same week they announced the crypto portfolio management firm would be laying off 10% of its staff.
+Pure number crunching aside, the Times story is particularly unflattering to the Winklevoss brothers, founders of Gemini Capital. Seems they started a tour of their cover band Mars Junction the same week they announced the crypto portfolio management firm would be laying off 10% of its staff.
 
 Not a good look, bros.
 
+Separately, the Times ran a really nice [guest essay](https://www.nytimes.com/2022/06/28/opinion/coping-climate-war-happiness.html) on Tuesday by clinical psychologist Mary Pipher about how she maintains calm and a routine to create good days despite news-related stressors. 
 
-<!--
-
-Self-care column...
-
-https://www.nytimes.com/2022/06/28/opinion/coping-climate-war-happiness.html
-
- -->
-
-
-Separately, the Times ran a really nice column on TKTKTK by clinical psychologist TKTKTKTK about how she maintains calm and a routine to create good days despite news-related stressors. She doesn't mention the markets specifically -- hey, there are a lot of sources of big-picture gloom to choose from these days. But at any rate, TKTKTKTK definitely gives some good advice that I think a lot of us in crypto world could use right now.
+She doesn't mention the markets specifically -- hey, there are a lot of sources of big-picture gloom to choose from these days. But at any rate, Phipher definitely gives some [good advice](https://www.nytimes.com/2022/06/28/opinion/coping-climate-war-happiness.html) that I think a lot of us in crypto world could use right now.
 
 The week's other notable headlines:
 
-
-
-
 - **Bitcoin suffered its worst quarterly decline in 11 years,** down 56% in the period through June 30, according to [The Block](https://www.theblock.co/post/155035/bitcoin-registers-its-worst-quarter-in-11-years-amid-crypto-market-tumult).
 
-- Three Arrows melted down. <!--
-
-https://news.sky.com/story/crypto-hedge-fund-three-arrows-capital-plunges-into-liquidation-12642402
-
-
- CoinDesk reports that Genesis Trading is facing big losses related to the meltdown of Three Arrows Capital. <!-- Cryptocurrency market maker and lending firm Genesis Trading is facing potential losses into the “hundreds of millions,” according to three people familiar with the matter.
-The losses at Genesis relate, in part, to exposure to over-leveraged hedge fund Three Arrows Capital and Hong Kong-based crypto lender Babel Finance, and are on the order of “a few hundred million dollars,” one of the people said.
-
-https://www.coindesk.com/business/2022/06/29/genesis-faces-hundreds-of-millions-in-losses-as-3ac-exposure-swamps-crypto-lenders-sources/
-
--->
-
-
-- **More headaches for Coinbase.** Goldman Sachs analyst [cut their rating](https://www.coindesk.com/business/2022/06/27/goldman-cuts-coinbase-to-sell-due-to-fall-in-crypto-prices-and-industry-activity-shares-drop/) of the trading platform's shares to "sell." Separately, the Intercept [reported](https://theintercept.com/2022/06/29/crypto-coinbase-tracer-ice/) that Coinbase has a contract to provide geolocation data to Immigration and Customs Enforcement. The previously undisclosed deal was unearthed through a public records request by the watchdog group Tech Inquiry.
+- **Three Arrows Capital,** a crypto hedge fund with an estimated $10 billion under management, [filed for bankruptcy](https://www.msn.com/en-us/money/companies/crypto-hedge-fund-three-arrows-files-for-us-bankruptcy/ar-AAZ78EW). There may yet be more such meltdowns to come as high-profile players reduce their leveraged bets. But the trend will eventually fizzle out, [according to Business Insider's Matthew Fox](https://markets.businessinsider.com/news/currencies/crypto-market-deleveraging-near-end-three-arrows-capital-bitcoin-jpmorgan-2022-6?op=1). 
+- 
+- **Fresh headaches for Coinbase.** Goldman Sachs analyst [cut their rating](https://www.coindesk.com/business/2022/06/27/goldman-cuts-coinbase-to-sell-due-to-fall-in-crypto-prices-and-industry-activity-shares-drop/) of the trading platform's shares to "sell." Separately, the Intercept [reported](https://theintercept.com/2022/06/29/crypto-coinbase-tracer-ice/) that Coinbase has a contract to provide geolocation data to Immigration and Customs Enforcement. The previously undisclosed deal was unearthed through a public records request by the watchdog group Tech Inquiry.
 
 - **OpenSea suffered a data breach.** The leading platform for trading non-fungible tokens [announced](https://opensea.io/blog/safety-security/important-update-on-email-vendor-security-incident/) that an unspecified number of customer email addresses had leaked to a third party due to mishandling by the platform's email vendor.
 
 - **Polkadot is overhauling** its governance in an attempt to [improve decentralization](https://www.theblock.co/post/154838/polkadot-to-scrap-its-council-body-in-new-governance-system).
+
+- **The FBI added** an alleged scammer who went by the handle "Cryptoqueen" [to their 10 Most Wanted list](https://www.reuters.com/world/us/us-adds-cryptoqueen-most-wanted-list-over-alleged-4-billion-fraud-2022-06-30/). The law enforcement agency is offering a $100,000 reward for information leading to the apprehension of Cryptoqueen (real name: Ruja Ignatova) in connection with a $4 billion pyramid scheme. 
 
 - **Gary Gensler, chairman of the Securities and Exchange Commission,** said in an [interview with CNBC](https://www.cnbc.com/video/2022/06/27/sec-chair-gary-gensler-discusses-potential-crypto-regulation-and-stablecoins.html) that bitcoin is the only token he considers a commodity. Gensler's SEC is currently weighing how it might share oversight of crypto with another U.S. regulatory agency, the Commodity Futures Trading Commission.
 
